@@ -3,7 +3,7 @@
 use strict;
 
 use Data::ObjectDriver::SQL;
-use Test::More tests => 55;
+use Test::More tests => 58;
 
 my $stmt = ns();
 ok($stmt, 'Created SQL object');
@@ -126,6 +126,11 @@ is($stmt->as_sql_where, "WHERE (foo != ?)\n");
 is(scalar @{ $stmt->bind }, 1);
 is($stmt->bind->[0], 'bar');
 
+$stmt = ns(); $stmt->add_where(foo => { column => 'bar', op => '!=', value => 'bar' });
+is($stmt->as_sql_where, "WHERE (bar != ?)\n");
+is(scalar @{ $stmt->bind }, 1);
+is($stmt->bind->[0], 'bar');
+
 $stmt = ns(); $stmt->add_where(foo => \'IS NOT NULL');
 is($stmt->as_sql_where, "WHERE (foo IS NOT NULL)\n");
 is(scalar @{ $stmt->bind }, 0);
@@ -141,7 +146,7 @@ is($stmt->bind->[1], 'quux');
 $stmt = ns();
 $stmt->add_where(foo => [ { op => '>', value => 'bar' },
                           { op => '<', value => 'baz' } ]);
-is($stmt->as_sql_where, "WHERE (foo > ? OR foo < ?)\n");
+is($stmt->as_sql_where, "WHERE ((foo > ?) OR (foo < ?))\n");
 is(scalar @{ $stmt->bind }, 2);
 is($stmt->bind->[0], 'bar');
 is($stmt->bind->[1], 'baz');
@@ -149,14 +154,14 @@ is($stmt->bind->[1], 'baz');
 $stmt = ns();
 $stmt->add_where(foo => [ -and => { op => '>', value => 'bar' },
                                   { op => '<', value => 'baz' } ]);
-is($stmt->as_sql_where, "WHERE (foo > ? AND foo < ?)\n");
+is($stmt->as_sql_where, "WHERE ((foo > ?) AND (foo < ?))\n");
 is(scalar @{ $stmt->bind }, 2);
 is($stmt->bind->[0], 'bar');
 is($stmt->bind->[1], 'baz');
 
 $stmt = ns();
 $stmt->add_where(foo => [ -and => 'foo', 'bar', 'baz']);
-is($stmt->as_sql_where, "WHERE (foo = ? AND foo = ? AND foo = ?)\n");
+is($stmt->as_sql_where, "WHERE ((foo = ?) AND (foo = ?) AND (foo = ?))\n");
 is(scalar @{ $stmt->bind }, 3);
 is($stmt->bind->[0], 'foo');
 is($stmt->bind->[1], 'bar');
@@ -166,13 +171,13 @@ is($stmt->bind->[2], 'baz');
 my %terms = ( foo => [-and => 'foo', 'bar', 'baz']);
 $stmt = ns();
 $stmt->add_where(%terms);
-is($stmt->as_sql_where, "WHERE (foo = ? AND foo = ? AND foo = ?)\n");
+is($stmt->as_sql_where, "WHERE ((foo = ?) AND (foo = ?) AND (foo = ?))\n");
 $stmt->add_where(%terms);
-is($stmt->as_sql_where, "WHERE (foo = ? AND foo = ? AND foo = ?) AND (foo = ? AND foo = ? AND foo = ?)\n");
+is($stmt->as_sql_where, "WHERE ((foo = ?) AND (foo = ?) AND (foo = ?)) AND ((foo = ?) AND (foo = ?) AND (foo = ?))\n");
 
 $stmt = ns();
 $stmt->add_select(foo => 'foo');
-$stmt->add_select(bar => 'bar');
+$stmt->add_select('bar');
 $stmt->from([ qw( baz ) ]);
 is($stmt->as_sql, "SELECT foo, bar\nFROM baz\n");
 
